ammended the GetResponse method to handle numeric input

--- a/Part 1.2/Part 1.2.csproj
+++ b/Part 1.2/Part 1.2.csproj
@@ -9,6 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\greetings.wav" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\greetings.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="NAudio" Version="2.2.1" />
   </ItemGroup>
 
